--- a/css/style.css
+++ b/css/style.css
@@ -2465,3 +2465,23 @@ h6 {
     font-size: 18px;
   }
 }
+/* <?php
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+     Collect form data
+    $name = htmlspecialchars($_POST['inputName']);
+    $email = htmlspecialchars($_POST['inputEmail']);
+    $message = htmlspecialchars($_POST['inputMessage']);
+
+     Email details
+    $to = "info@romanmediaug.com";
+    $subject = "New Contact Form Submission";
+    $body = "Name: $name\nEmail: $email\n\nMessage:\n$message";
+    $headers = "From: $email";
+
+     Send email
+    if (mail($to, $subject, $body, $headers)) {
+        echo '<meta http-equiv="refresh" content="0;url=index.html">';
+    } else {
+        echo "Failed to send message.";
+    }
+} */
