--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,8 @@ h6 {
 }
 .hero-area .hero-head strong {
   color: #fd562a;
+  /* font-size: 36px; */
+  font-size: 48px;
 }
 .hero-area .content-block p {
   font-size: 24px;
@@ -2418,7 +2420,7 @@ h6 {
     font-size: 20px;
   }
   .hero-area .hero-head small {
-    font-size: 18px;
+    /* font-size: 18px; */
   }
   .hero-area .image-wrapper:after {
     display: none;
@@ -2465,23 +2467,4 @@ h6 {
     font-size: 18px;
   }
 }
-/* <?php
-if ($_SERVER["REQUEST_METHOD"] == "POST") {
-     Collect form data
-    $name = htmlspecialchars($_POST['inputName']);
-    $email = htmlspecialchars($_POST['inputEmail']);
-    $message = htmlspecialchars($_POST['inputMessage']);
 
-     Email details
-    $to = "info@romanmediaug.com";
-    $subject = "New Contact Form Submission";
-    $body = "Name: $name\nEmail: $email\n\nMessage:\n$message";
-    $headers = "From: $email";
-
-     Send email
-    if (mail($to, $subject, $body, $headers)) {
-        echo '<meta http-equiv="refresh" content="0;url=index.html">';
-    } else {
-        echo "Failed to send message.";
-    }
-} */
